Rework of Logging system to use Java native Logger.